# django-feed-reader

./: .pylintrc  pyproject.toml  readme.md  requirements.txt
feeds/: admin.py  fetch.py  models.py  parse.py  pull.py  utils.py
feeds/feed_updates/: __init__.py  fetch.py  parse.py  predict.py
feeds/management/commands/: importfeed.py  refreshfeeds.py  showfeed.py
src/feeds/: admin.py  models.py  tests.py  url_converters.py  utils.py
src/feeds/feed_updates/: __init__.py  fetch.py  parse.py  predict.py
src/feeds/fetch/: __init__.py  parse.py  predict.py  query.py
src/feeds/management/commands/: importfeed.py  refreshfeeds.py
src/feeds/migrations/: 0011_source_author_source_icon_url_source_subtitle_and_more.py  0012_alter_entry_created_alter_source_feed_url_and_more.py  0013_alter_entry_options_remove_entry_index.py  0014_remove_source_interval_remove_source_is_cloudflare_and_more.py  0015_alter_source_subtitle.py  0016_rename_post_enclosure_entry.py  0017_alter_entry_created.py  0018_rename_due_poll_source_due_fetch_and_more.py  0019_remove_source_last_change_remove_source_max_index_and_more.py  0020_alter_source_due_fetch.py  0021_delete_webproxy_remove_enclosure_description_and_more.py
src/feeds/tests/: test_parse.py
